--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,7 +3,7 @@ body {
     background-color: steelblue;
     color: rgba(255, 255, 255, 0.8);
     font-weight: 500;
-    transition: background-color .5s;
+    transition: background-color 1s;
 }
 
 .customizer span {
@@ -133,7 +133,7 @@ small {
     font-size: 75%;
 }
 
-.loves {
+.favs-box {
     border: 1px solid rgb(255, 255, 255, 0.5);
     border-radius: 6px;
 }
