--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,7 @@
 body {
-    font-family: 'Corporative Alt Sans', 'IBM Plex Sans', sans-serif;
+    font-family: 'Corporative Alt Sans', sans-serif;
     background-color: steelblue;
-    color: rgba(255, 255, 255, 0.8);
+    color: rgba(255, 255, 255, 0.9);
     font-weight: 500;
     transition: background-color 1s;
 }
@@ -97,14 +97,14 @@ button i.fa {
 }
 
 h1 {
-    font-family: 'Corporative', 'IBM Plex Sans', sans-serif;
+    font-family: 'Corporative', sans-serif;
     font-size: 3.75em;
     font-weight: 900;
     color: rgba(255, 255, 255, 1);
 }
 
 h2 {
-    font-family: 'Corporative', 'IBM Plex Sans', sans-serif;
+    font-family: 'Corporative', sans-serif;
     font-weight: 900;
     color: rgba(255, 255, 255, 1);
 }
