--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Corporative', sans-serif;
+    font-family: 'Corporative Alt Sans', sans-serif;
     background-color: steelblue;
     color: rgba(255, 255, 255, 0.9);
     font-weight: 500;
