--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -25,7 +25,7 @@ body {
 .dark-bg button small,
 .dark-bg #greeting-icon i,
 .dark-bg a {
-    color: rgb(130, 130, 130);
+    color: rgb(150, 150, 150);
 }
 
 .seasonal-bg.winter-theme {
@@ -63,7 +63,11 @@ body {
 }
 
 .seasonal-bg.christmas-theme .favs-box {
-    border: 1px solid green;
+    border: 4px dotted green;
+}
+
+.seasonal-bg.christmas-theme #greeting-icon .fa-hand{
+    color: rgb(245, 213, 33);
 }
 
 /* New Years Theme */
@@ -114,7 +118,7 @@ h2 {
 }
 
 p {
-    font-size: 1.2em;
+    font-size: 1.3em;
     line-height: 1.5;
     margin-bottom: 1em;
 }
