--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,7 @@ body {
 
 h1 {
     font-family: 'Corporative', 'IBM Plex Sans', sans-serif;
-    font-size: 3.75em;
+    font-size: 3.2em;
     font-weight: 900;
     color: rgba(255, 255, 255, 1);
 }
@@ -105,31 +105,42 @@ button i.fa {
 
 /* Christmas Theme */
 .seasonal-bg.christmas-theme {
-    background-color: darkred;
+    background-color: rgb(222, 222, 222);
 }
 
 .seasonal-bg.christmas-theme p,
 .seasonal-bg.christmas-theme li,
-.seasonal-bg.christmas-theme p {
-    color: rgba(255, 255, 255, 0.8);
+.seasonal-bg.christmas-theme a,
+.seasonal-bg.christmas-theme button {
+    color: green;
 }
 
 .seasonal-bg.christmas-theme h1,
 .seasonal-bg.christmas-theme h2,
 .seasonal-bg.christmas-theme button i,
 .seasonal-bg.christmas-theme button small,
-.seasonal-bg.christmas-theme #greeting-icon i,
+.seasonal-bg.christmas-theme #greeting-icon i {
+    color: darkred;
+}
+
 .seasonal-bg.christmas-theme a {
-    color: limegreen;
-    opacity: 0.88;
+    border-bottom: 2px dashed darkred;
+}
+
+.seasonal-bg.christmas-theme ul {
+    list-style-type: disc;
+}
+
+.seasonal-bg.christmas-theme li::marker {
+    color: darkred;
 }
 
 .seasonal-bg.christmas-theme .favs-box {
-    border: 2px dotted rgb(245, 213, 33);;
+    border: 2px dashed darkred;
 }
 
 .seasonal-bg.christmas-theme #greeting-icon .fa-hand {
-    color: rgb(245, 213, 33);
+    color: grey;
 }
 
 /* New Years Theme */
