--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -100,8 +100,10 @@ button i.fa {
 }
 
 .seasonal-bg.winter-theme li::marker {
-    color: rgb(157, 173, 223);    content: '\f2dc     ';
-    font-family: FontAwesome;    font-weight: lighter;
+    color: rgb(157, 173, 223);    
+    content: '\f2dc     ';
+    font-family: FontAwesome;    
+    font-weight: lighter;
     font-size: 90%;
 }
 
@@ -122,7 +124,7 @@ button i.fa {
 
 /* Christmas Theme */
 .seasonal-bg.christmas-theme {
-    background-color: rgb(240, 240, 240);
+    background-color: rgb(255, 255, 240);
 }
 
 .seasonal-bg.christmas-theme p,
