--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,12 +11,14 @@ h1 {
     font-family: 'Corporative', 'IBM Plex Sans', sans-serif;
     font-size: 4em;
     font-weight: 900;
+    font-display: swap;
     color: rgba(255, 255, 255, 1);
 }
 
 h2 {
     font-family: 'Corporative', 'IBM Plex Sans', sans-serif;
     font-weight: 900;
+    font-display: swap;
     color: rgba(255, 255, 255, 1);
 }
 
