--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,6 +4,7 @@ body {
     background-color: steelblue;
     color: rgba(255, 255, 255, 0.75);
     transition: background-color .5s;
+    line-height: 1.25;
 }
 
 h1 {
