--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,7 +3,7 @@ body {
     font-weight: 500;
     background-color: steelblue;
     color: rgba(255, 255, 255, 0.75);
-    transition: background-color .75s;
+    transition: all .75s;
 }
 
 h1 {
