--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -35,7 +35,7 @@ li {
 a {
     text-decoration: none;
     color: rgba(255, 255, 255);
-    border-bottom: 2px dotted rgba(255, 255, 255, 0.3);
+    border-bottom: 2px solid rgba(255, 255, 255, 0.3);
 }
 
 .favs-box {
@@ -223,4 +223,45 @@ button i.fa {
 
 .seasonal-bg.valentines-theme #greeting-icon .fa-hand {
     color: red;
+}
+
+
+/* Spring Theme */
+.seasonal-bg.spring-theme {
+    background-color: #e2ffdf;
+}
+
+.seasonal-bg.spring-theme p,
+.seasonal-bg.spring-theme li,
+.seasonal-bg.spring-theme a,
+.seasonal-bg.spring-theme button {
+    color: #948f8c;
+}
+
+.seasonal-bg.spring-theme h1,
+.seasonal-bg.spring-theme h2,
+.seasonal-bg.spring-theme button i,
+.seasonal-bg.spring-theme small,
+.seasonal-bg.spring-theme #greeting-icon i {
+    color: #8975b8;
+}
+
+.seasonal-bg.spring-theme a {
+    border-bottom: 2px dotted #d0adb1;
+}
+
+.seasonal-bg.spring-theme li::marker {
+    color: #d0adb1;
+    content: '\f4d8     ';
+    font-family: FontAwesome;
+    font-size: 85%;
+}
+
+.seasonal-bg.spring-theme .favs-box {
+    border: 2px dotted #d0adb1;
+    border-radius: 12px;
+}
+
+.seasonal-bg.spring-theme #greeting-icon .fa-hand {
+    color: #d0adb1;
 }
