--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -282,7 +282,7 @@ button i.fa {
 }
 
 .seasonal-bg.summer-theme a {
-    border-bottom: 2px dashed #3D74B6;
+    border-bottom: 2px dashed #DDA853;
 }
 
 .seasonal-bg.summer-theme li::marker {
