--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -35,7 +35,7 @@ li {
 a {
     text-decoration: none;
     color: rgba(255, 255, 255);
-    border-bottom: 2px dashed rgba(255, 255, 255, 0.3);
+    border-bottom: 2px dotted rgba(255, 255, 255, 0.3);
 }
 
 .favs-box {
