--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,9 +1,9 @@
 body {
     font-family: 'Corporative Alt Sans', 'IBM Plex Sans', sans-serif;
     font-weight: 500;
-    background-color: steelblue;
+    background-color: rgb(55, 134, 171);
     color: rgba(255, 255, 255, 0.75);
-    transition: all .75s;
+    transition: all .6s;
 }
 
 h1 {
