--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,7 @@ body {
 
 h1 {
     font-family: 'Corporative', 'IBM Plex Sans', sans-serif;
-    font-size: 3.5rem;
+    font-size: 2.5rem;
     font-weight: 900;
     color: rgba(255, 255, 255, 1);
 }
@@ -16,12 +16,7 @@ h1 {
 h2 {
     font-family: 'Corporative', 'IBM Plex Sans', sans-serif;
     font-weight: 900;
-    font-size: 1.8rem;
     color: rgba(255, 255, 255, 1);
-}
-
-p {
-    font-size: 1.27rem;
 }
 
 ul {
@@ -29,7 +24,6 @@ ul {
 }
 
 li {
-    font-size: 1.1rem;
     margin-bottom: .5rem;
     line-height: 1.33;
 }
@@ -46,7 +40,7 @@ a {
 }
 
 .theme-bar button .small {
-    font-size: 0.85rem;
+    font-size: 0.75rem;
 }
 
 button {
@@ -55,13 +49,30 @@ button {
     border: 0;
     border-bottom: 3px solid rgba(0, 0, 0, 0);
     text-align: center;
-    padding: 
 }
 
 button p.active {
     border-bottom: 3px solid rgba(200, 200, 200, 0.8);
 }
 
+@media screen and (min-width: 576px) {
+    h1 {
+        font-size: 3.5rem;
+    }
+    
+    p {
+        font-size: 1.27rem;
+    }
+    
+    li {
+        font-size: 1.1rem;
+        margin-bottom: .5rem;
+    }
+    
+    .theme-bar button .small {
+        font-size: 0.8rem;
+    }
+}
 
 /* ===== Dark mode ===== */
 
